Correct typo in placeholder

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="odd-color">
                     <p id="first-question">Okay, <span class="user-name"></span>, I would like to ask you some questions.</p>
                     <p>First, tell me, what place would you like to visit?</p>
-                    <input type="text" placeholder="I would like to vistit..." id="input-place" class="input" >
+                    <input type="text" placeholder="I would like to visit..." id="input-place" class="input" >
                 </div>
 
                 <div class="odd-color">
